gccida/g2/binary_fp_operator
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/binary_fp_operator/src/i386.c:3863:34: error: must use 'enum' tag to refer to type 'machine_mode'
int  binary_fp_operator( rtx op, machine_mode mode) 
                                 ^
                                 enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/binary_fp_operator/src/i386.c:3873:8: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
return mode_class_0[*( ( unsigned __int8 *)op + 2)] == MODE_FLOAT; 
       ^~~~~~~~~~~~
       mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/binary_fp_operator/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/binary_fp_operator/src/i386.c:3878:8: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
return mode_class_0[*( ( unsigned __int8 *)op + 2)] == MODE_FLOAT; 
       ^~~~~~~~~~~~
       mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/binary_fp_operator/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/binary_fp_operator/src/obj/i386.o] Error 1
